<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".commonActivities.IntroGameActivity"
    android:background="@drawable/wood"
    >

    <LinearLayout
        android:id="@+id/layoutLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bines"
            android:shadowColor="#00F7FF"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="50"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="#00FFEA"
            android:textStyle="bold"
            android:textSize="60sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="727dp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <GridLayout
        android:layout_width="403dp"
        android:layout_height="150dp"
        android:columnCount="1"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutLogo"
        app:layout_constraintVertical_bias="0.184">
        <Button
            android:id="@+id/NewGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/led"
            android:shadowColor="#000000"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="30"
            android:gravity="center"
            android:text="@string/NewGame"
            android:textStyle="bold"
            android:textColor="#FA00F6"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/PlayersListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="2"
            android:layout_columnWeight="1"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/led"
            android:shadowColor="#000000"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="30"
            android:gravity="center"
            android:text="@string/PlayersList"
            android:textStyle="bold"
            android:textColor="#FA00F6"
            android:textSize="30sp" />
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bines"
        android:gravity="center"
        android:text="@string/copyright"
        android:shadowColor="#FA00F6"
        android:shadowDx="15"
        android:shadowDy="15"
        android:shadowRadius="30"
        android:textColor="#FA00F6"
        android:textSize="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints,SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>