<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".commonActivities.AddPlayerActivity"
    android:background="@drawable/wood">

        <TextView
            android:id="@+id/titre_ajout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingBottom="10dp"
            android:text="@string/joueurAjouter"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:shadowColor="#00F7FF"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="30"
            android:textColor="#00FFEA"
            android:textSize="25sp"
            android:textStyle="bold"
            app:fontFamily="@font/bines"/>

        <Button
            android:id="@+id/jeuretour"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="start"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titre_ajout"
            android:text="@string/retour"
            android:textColor="#FA00F6"
            android:textSize="20sp"
            android:textStyle="bold"
            app:fontFamily="@font/led"
            android:shadowColor="#FA00F6"
            android:shadowDx="15"
            android:shadowDy="15"
            android:shadowRadius="30"/>

        <LinearLayout
            android:id="@+id/lay_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titre_ajout"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/jeuretour"
            android:padding="16dp">

            <EditText
                android:id="@+id/nomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nouveauJoueurNom"
                android:textSize="20sp"
                android:shadowColor="#FFF200"
                android:shadowDx="15"
                android:shadowDy="15"
                android:shadowRadius="30"
                android:textColor="#FFF200"
                android:inputType="textCapCharacters"
                android:textStyle="bold"
                android:fontFamily="@font/beon"
                />

            <Button
                android:id="@+id/ajouter_joueur"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="80dp"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/ajouter"
                android:textColor="#FA00F6"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="@font/led"
                android:layout_gravity="center_horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scroll"
                android:shadowColor="#FA00F6"
                android:shadowDx="15"
                android:shadowDy="15"
                android:shadowRadius="30"/>

        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>