<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".commonActivities.SelectPlayersActivity"
    android:background="@drawable/wood">

    <TextView
        android:id="@+id/texte_joueur"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:text="@string/joueursListe"
        android:textColor="#00FFEA"
        android:textSize="25sp"
        android:textStyle="bold"
        app:fontFamily="@font/bines"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:shadowColor="#00F7FF"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="30"/>

    <Button
        android:id="@+id/jeuretour"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="start"
        android:text="@string/retour"
        android:textColor="#FA00F6"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/led"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/texte_joueur"
        android:shadowColor="#FA00F6"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="30"/>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="400dp"
        android:layout_height="500dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/jeuretour"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:id="@+id/layout_grid_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <GridView
                android:id="@+id/player_grid_view"
                android:layout_width="wrap_content"
                android:numColumns="2"
                android:layout_height="500dp"
                />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/plateau_jeu"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/lancer"
        android:textColor="#FA00F6"
        android:textSize="15sp"
        android:textStyle="bold"
        app:fontFamily="@font/led"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll"
        android:shadowColor="#FA00F6"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="30"/>

</androidx.constraintlayout.widget.ConstraintLayout>
